--- a/gradle.properties
+++ b/gradle.properties
@@ -1,20 +1,26 @@
-# Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
+# Gradle
+org.gradle.jvmargs=-Xmx2G -XX:+UseParallelGC
 org.gradle.parallel=true
+org.gradle.caching=true
+org.gradle.daemon=true
 
-# IntelliJ IDEA is not yet fully compatible with configuration cache, see: https://github.com/FabricMC/fabric-loom/issues/1349
-org.gradle.configuration-cache=false
-
-# Fabric Properties
-# check these on https://fabricmc.net/develop
-minecraft_version=1.21.1
-loader_version=0.18.4
-loom_version=1.14-SNAPSHOT
-
-# Mod Properties
+# Mod
+mod_id=beemancer
+mod_name=Beemancer
 mod_version=1.0.0
-maven_group=com.chapeau.beemancer
-archives_base_name=beemancer
+mod_group=com.chapeau.beemancer
+mod_author=Hath le Chapeau
+mod_description=Bee magic mod for Minecraft
 
-# Dependencies
-fabric_api_version=0.116.7+1.21.1
+# Minecraft / NeoForge
+minecraft_version=1.21.1
+neoforge_version=21.1.77
+neoforge_version_range=[21.1,)
+loader_version_range=[4,)
+minecraft_version_range=[1.21.1,1.22)
+
+# Java
+java_version=21
+
+# Mappings (optionnel, NeoForge utilise Mojmap par défaut)
+# parchment_version=2024.07.28
