--- a/gradle.properties
+++ b/gradle.properties
@@ -14,13 +14,48 @@ mod_description=Bee magic mod for Minecraft
 
 # Minecraft / NeoForge
 minecraft_version=1.21.1
-neoforge_version=21.1.77
+neoforge_version=21.1.206
 neoforge_version_range=[21.1,)
 loader_version_range=[4,)
 minecraft_version_range=[1.21.1,1.22)
 
 # Java
 java_version=21
+
+
+parchment_minecraft_version = same
+parchment_version = 2024.11.17
+
+# Registrate
+registrate_version = MC1.21-1.3.0+67
+
+# Ponder
+# https://maven.createmod.net/net/createmod/ponder/
+ponder_version = 1.0.80
+
+# Flywheel & Vanillin
+# https://maven.createmod.net/dev/engine-room/flywheel/
+flywheel_version = 1.0.6-beta-37
+flywheel_version_range = [1.0.0,2.0)
+# https://maven.createmod.net/dev/engine-room/vanillin/
+vanillin_version = 1.0.0-beta-11
+
+# Just Enough Items
+# https://modrinth.com/mod/jei/versions
+jei_version = 19.21.0.247
+
+# Curios
+# https://modrinth.com/mod/curios/versions
+curios_version = 9.2.2
+
+# Sodium
+# https://modrinth.com/mod/sodium/versions
+sodium_version = 0.6.9
+
+# CC: Tweaked
+# https://modrinth.com/mod/cc-tweaked/versions
+cc_tweaked_enable = true
+cc_tweaked_version = 1.116.1
 
 # Mappings (optionnel, NeoForge utilise Mojmap par défaut)
 # parchment_version=2024.07.28
