--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,5 @@
 # Beemancer Access Transformers
 # Format: <access> <class> <member>
+
+# Accès au champ jumping pour le système de montée
+public net.minecraft.world.entity.LivingEntity jumping
