--- a/build.gradle
+++ b/build.gradle
@@ -102,10 +102,11 @@ dependencies {
 		runtimeOnly("cc.tweaked:cc-tweaked-$minecraft_version-forge:$cc_tweaked_version")
 	}
 
-	runtimeOnly("dev.architectury:architectury-neoforge:13d.0.8")
-	implementation("dev.ftb.mods:ftb-chunks-neoforge:2101.1.1")
-	implementation("dev.ftb.mods:ftb-teams-neoforge:2101.1.0")
-	implementation("dev.ftb.mods:ftb-library-neoforge:2101.1.3")
+	// FTB Mods (minimap) - désactivé
+	//runtimeOnly("dev.architectury:architectury-neoforge:13d.0.8")
+	//implementation("dev.ftb.mods:ftb-chunks-neoforge:2101.1.1")
+	//implementation("dev.ftb.mods:ftb-teams-neoforge:2101.1.0")
+	//implementation("dev.ftb.mods:ftb-library-neoforge:2101.1.3")
 
 	//implementation("maven.modrinth:journeymap:1.21.1-6.0.0-beta.46+neoforge")
 	//implementation("info.journeymap:journeymap-api-neoforge:2.0.0-1.21.1-SNAPSHOT") {
