--- a/gradle.properties
+++ b/gradle.properties
@@ -54,8 +54,8 @@ sodium_version = 0.6.9
 
 # CC: Tweaked
 # https://modrinth.com/mod/cc-tweaked/versions
-cc_tweaked_enable = true
+cc_tweaked_enable = false
 cc_tweaked_version = 1.116.1
 
-# Mappings (optionnel, NeoForge utilise Mojmap par défaut)
+# Mappings (optionnel, NeoForge utilise Mojmap par dï¿½faut)
 # parchment_version=2024.07.28
